# solana-dex-aggregator

./: .gitignore  ARCH.md  Cargo.toml  README.md  docker-compose.yml
crates/api/: .env.example  Cargo.toml
crates/api/migrations/: 0001_token_mints.sql
crates/api/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
crates/api/src/app/: mod.rs
crates/api/src/domain/: error.rs  mod.rs
crates/api/src/infra/: mod.rs
crates/api/src/infra/db/: mod.rs  token_mint_repo.rs
crates/api/src/infra/http/: accounts.rs  health.rs  metrics.rs  mod.rs
crates/api/src/infra/repo/: in_memory.rs
crates/api/src/routes/: accounts.rs  health.rs
crates/api/tests/: accounts_flow.rs  db_connectivity.rs
