[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
solana-sdk = "4.0.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
