[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.9"
dotenvy = "0.15.7"
metrics = "0.24.6"
metrics-exporter-prometheus = "0.18.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
solana-sdk = "4.0.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.6", features = ["request-id", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
validator = { version = "0.20.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "migrate"] }
